@@ -1,3 +1,6 @@
+2012-02-02 Alexander Malysh <amalysh at kannel.org>
+    * gw/bb_smscconn.c: fixed bb_smscconn_send_failed for DLRs.
+
 2012-01-25  Stipe Tolj  <stolj at kannel.org>
     * configure: fixing autoconf generated script from Andreas, which breaks
       the 'config.nice' re-configuration handling. Seems to be the autoconf
